# the-map-of-mathematics

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  ruff.toml
.superdesign/: design-system.md
.superdesign/brand_styles/app.superdesign.dev/: brand-guide.json
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
scripts/: setup.sh
src/mathverse/: __main__.py
src/mathverse/cli/: main.py  utils.py
src/mathverse/cli/commands/: explore.py  search.py  visualize.py
src/mathverse/core/: content.py  graph.py  i18n.py  models.py  quiz.py  repository.py  seed.py  service.py
src/mathverse/core/topics/: abstract_algebra.py  arithmetic.py  (+4 more)
src/mathverse/gui/: main.py
src/mathverse/tui/: browser.py  launcher.py  topic_screen.py
src/mathverse/utils/: logger.py
src/themap/: __main__.py
src/themap/cli/: main.py  utils.py
src/themap/core/: graph.py  models.py  repository.py  seed.py  service.py
src/themap/gui/: main.py
src/themap/utils/: logger.py
src/themath/: __main__.py
src/themath/cli/: main.py  utils.py
src/themath/core/: content.py  graph.py  i18n.py  models.py  repository.py  seed.py  service.py
src/themath/gui/: main.py
src/themath/tui/: browser.py  launcher.py  topic_screen.py
src/themath/utils/: config.py  logger.py
tests/: conftest.py
tests/test_cli/: test_commands.py
tests/test_core/: test_graph.py  test_models.py  test_repository.py  test_service.py
tests/test_gui/: conftest.py  test_explore_screen.py  test_home_screen.py  test_splash_screen.py  test_topic_screen.py
(+35 files in other folders)
